manjaro/kubernetes/example/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-app
  namespace: pet
  labels:
    app: app
    service: service-app
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app: app
