manjaro/kubernetes/example/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-pet
  namespace: pet
spec:
  hosts:
  - "testing.com"
  gateways:
  - pet-gateway
  http:
  - route:
    - destination:
        host: service-app
    corsPolicy:
      allowOrigins:
        - exact: "*"
      allowMethods:
      - GET
      - POST
      - PATCH
      - PUT
      - DELETE
      - OPTIONS
      allowCredentials: false
      allowHeaders:
      - "*"
